--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -1,32 +1,3 @@
-# This workflow build and push a Docker container to Google Artifact Registry
-# and deploy it on Cloud Run when a commit is pushed to the "main"
-# branch.
-#
-# To configure this workflow:
-#
-# 1. Enable the following Google Cloud APIs:
-#
-#    - Artifact Registry (artifactregistry.googleapis.com)
-#    - Cloud Run (run.googleapis.com)
-#    - IAM Credentials API (iamcredentials.googleapis.com)
-#
-#    You can learn more about enabling APIs at
-#    https://support.google.com/googleapi/answer/6158841.
-#
-# 2. Create and configure a Workload Identity Provider for GitHub:
-#    https://github.com/google-github-actions/auth#preferred-direct-workload-identity-federation.
-#
-#    Depending on how you authenticate, you will need to grant an IAM principal
-#    permissions on Google Cloud:
-#
-#    - Artifact Registry Administrator (roles/artifactregistry.admin)
-#    - Cloud Run Developer (roles/run.developer)
-#
-#    You can learn more about setting IAM permissions at
-#    https://cloud.google.com/iam/docs/manage-access-other-resources
-#
-# 3. Change the values in the "env" block to match your values.
-
 name: 'Build and Deploy to Cloud Run'
 
 on:
@@ -44,7 +15,6 @@ env:
 jobs:
   deploy:
     runs-on: 'ubuntu-latest'
-
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -52,42 +22,46 @@ jobs:
     steps:
       - name: Checkout
         uses: 'actions/checkout@v4'
+        # Pulls the latest code from the main branch for building and deployment.
 
-      # Configure Workload Identity Federation and generate an access token.
-      #
-      # See https://github.com/google-github-actions/auth for more options,
-      # including authenticating via a JSON credentials file.
+      # Authenticate with Google Cloud using Workload Identity Federation to generate a secure access token. Prefer this over JSON credentials for better security and scalability; see google-github-actions/auth for advanced configurations.
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      # BEGIN - Docker auth and build
-      #
-      # If you already have a container image, you can omit these steps.
-      - name: 'GAR Auth'
-        run: |-
+      # Set up Docker authentication for Google Artifact Registry (GAR) and build/push the container image. Skip these steps if you’re sourcing a pre-built image from elsewhere.
+      - name: GAR Auth
+        run: |
           gcloud auth configure-docker "${{ env.REGION }}-docker.pkg.dev"
 
-      - name: 'Build and Push Container'
-        run: |-
+      - name: Build and Push Container
+        run: |
           DOCKER_TAG="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
-      # - name: 'Deploy to Cloud Run'
+          # Tags the image with the commit SHA for traceability and pushes it to GAR. Ensure your Dockerfile is optimized for production use.
 
-        # END - Docker auth and build
-
-      #   uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
-      #   with:
-      #     service: '${{ env.SERVICE }}'
-      #     region: '${{ env.REGION }}'
-      #     # NOTE: If using a pre-built image, update the image name below:
-
-      #     image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}'
-      # # If required, use the Cloud Run URL output in later steps
-      # - name: 'Show output'
-      #   run: |2-
-
-      #     echo ${{ steps.deploy.outputs.url }}
+      # Deploy the container to Cloud Run, injecting critical environment variables for the backend app. Secrets are sourced from GitHub Secrets for security; verify all required vars are set in the repo settings.
+      - name: Deploy to Cloud Run
+        uses: 'google-github-actions/deploy-cloudrun@v2'
+        with:
+          service: ${{ env.SERVICE }}
+          image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
+          region: ${{ env.REGION }}
+          project_id: ${{ env.PROJECT_ID }}
+          env_vars: |
+            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_REGION=${{ secrets.AWS_REGION }}
+            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+            GEMINI_MODEL=${{ secrets.GEMINI_MODEL }}
+            LAMBDA_INFERENCE_FUNCTION_NAME=${{ secrets.LAMBDA_INFERENCE_FUNCTION_NAME }}
+            MAX_UPLOAD_SIZE=${{ secrets.MAX_UPLOAD_SIZE }}
+            REDIS_HOST=${{ secrets.REDIS_HOST }}
+            REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+            REDIS_PORT=${{ secrets.REDIS_PORT }}
+            REDIS_USERNAME=${{ secrets.REDIS_USERNAME }}
+            S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}
+            SECURE_COOKIE=${{ secrets.SECURE_COOKIE }}
