--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -22,16 +22,13 @@ jobs:
     steps:
       - name: Checkout
         uses: 'actions/checkout@v4'
-        # Pulls the latest code from the main branch for building and deployment.
 
-      # Authenticate with Google Cloud using Workload Identity Federation to generate a secure access token. Prefer this over JSON credentials for better security and scalability; see google-github-actions/auth for advanced configurations.
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      # Set up Docker authentication for Google Artifact Registry (GAR) and build/push the container image. Skip these steps if you’re sourcing a pre-built image from elsewhere.
       - name: GAR Auth
         run: |
           gcloud auth configure-docker "${{ env.REGION }}-docker.pkg.dev"
@@ -41,30 +38,18 @@ jobs:
           DOCKER_TAG="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
           docker build --tag "${DOCKER_TAG}" .
           docker push "${DOCKER_TAG}"
-          # Tags the image with the commit SHA for traceability and pushes it to GAR. Ensure your Dockerfile is optimized for production use.
 
-      # Deploy the container to Cloud Run, injecting critical environment variables for the backend app. Secrets are sourced from GitHub Secrets for security; verify all required vars are set in the repo settings.
+      # Deploy to Cloud Run with custom CPU and memory settings using gcloud
       - name: Deploy to Cloud Run
-        uses: 'google-github-actions/deploy-cloudrun@v2'
-        with:
-          service: ${{ env.SERVICE }}
-          image: "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}"
-          region: ${{ env.REGION }}
-          project_id: ${{ env.PROJECT_ID }}
-          env_vars: |
-            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_REGION=${{ secrets.AWS_REGION }}
-            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
-            GEMINI_MODEL=${{ secrets.GEMINI_MODEL }}
-            LAMBDA_INFERENCE_FUNCTION_NAME=${{ secrets.LAMBDA_INFERENCE_FUNCTION_NAME }}
-            MAX_UPLOAD_SIZE=${{ secrets.MAX_UPLOAD_SIZE }}
-            REDIS_HOST=${{ secrets.REDIS_HOST }}
-            REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
-            REDIS_PORT=${{ secrets.REDIS_PORT }}
-            REDIS_USERNAME=${{ secrets.REDIS_USERNAME }}
-            S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}
-            SECURE_COOKIE=${{ secrets.SECURE_COOKIE }}
+        run: |
+          gcloud run deploy ${{ env.SERVICE }} \
+            --image "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_NAME }}/${{ env.SERVICE }}:${{ github.sha }}" \
+            --region ${{ env.REGION }} \
+            --project ${{ env.PROJECT_ID }} \
+            --cpu 4 \
+            --memory 8Gi \
+            --platform managed \
+            --set-env-vars "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }},AWS_REGION=${{ secrets.AWS_REGION }},AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }},GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},GEMINI_MODEL=${{ secrets.GEMINI_MODEL }},LAMBDA_INFERENCE_FUNCTION_NAME=${{ secrets.LAMBDA_INFERENCE_FUNCTION_NAME }},MAX_UPLOAD_SIZE=${{ secrets.MAX_UPLOAD_SIZE }},REDIS_HOST=${{ secrets.REDIS_HOST }},REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }},REDIS_PORT=${{ secrets.REDIS_PORT }},REDIS_USERNAME=${{ secrets.REDIS_USERNAME }},S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }},SECURE_COOKIE=${{ secrets.SECURE_COOKIE }}"
 
       - name: Allow Unauthenticated Access
         run: |
