--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -11,7 +11,7 @@ env:
   SERVICE_ACCOUNT_NAME: 'netviser-action'
   GAR_NAME: 'netviser-backend-gar'
   GAR_LOCATION: 'asia-southeast1'
-  SERVICE: 'netviser-backend'
+  SERVICE: 'netviser-backend-v2'
   GCS_BUCKET_NAME: 'netviser-gcs-asia-southeast1'
 
 jobs:
