--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,5 @@ license = {text = "MIT"}
 distribution = false
 
 [tool.pdm.scripts]
-start = 'uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload --workers 4 --timeout-keep-alive 120'
-stop = 'kill -9 $(lsof -i:8080)'
+start = 'uvicorn app.main:app --host 0.0.0.0 --reload --workers 4 --timeout-keep-alive 120'
+stop = 'kill -9 $(lsof -i:8000)'
